fixing discorver overflow and adding some styling to smarHome

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ h1 {
   transform: translateY(-10%);
   object-fit: cover;
   object-position: center bottom;
+  margin-top: -10px;
 }
 
 .legend {
